# PlaneMIL

./: AttitudeControl.cc  CMakeLists.txt  IMUPlugin.cc  LidarPlugin.cc  Mixer.cc  PlaneMIL.world  PlaneMILCLI.cc  PlaneMILGUIPlugin.cc  PlaneMILPlugin.cc  PositionControl.cc  README.md  cessna_demo.world
ControlLib/: AttitudeController.cc  PIDFF.cc  PositionController.cc
ControlLib/include/: AttitudeController.hh  PIDFF.hh  PositionController.hh  SensorDataStruct.hh
GUI/: DashboardGUIPlugin.cc  DashboardGUIPlugin.hh  PlaneMILGUIPlugin.cc  PlaneMILGUIPlugin.hh
include/: AttiduteControl.hh  IMUPlugin.hh  LidarPlugin.hh  Mixer.hh  PlaneMILGUIPlugin.hh  PlaneMILPlugin.hh  PositionControl.hh  common.hh  msgTypedefs.hh
models/lidar/: model.config  model.sdf
models/plane_base/: model.config  model.sdf
models/plane_sensored/: model.config  model.sdf
msgs/: IMU.proto  RC.proto
